force-app/main/default/objects/SVMXC__Time_Tracker__c/SVMXC__Time_Tracker__c.object-meta.xml
<CustomObject>
    <description>This is to track time spend for various services delivered on Case.</description>
    <label>Time Tracker</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Tracker</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>