force-app/main/default/objects/SVMXC__Time_Tracker__c/fields/SVMXC__Case__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Time Tracker</relationshipLabel>
    <relationshipName>Time_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>