force-app/main/default/objects/SVMXC__Time_Tracker__c/fields/SVMXC__Line_Qty__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Line_Qty__c</fullName>
    <label>Line Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>