force-app/main/default/objects/SVMXC__Time_Tracker__c/fields/SVMXC__Start_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Start_Date_and_Time__c</fullName>
    <label>Start Date and Time</label>
    <type>DateTime</type>
</CustomField>